# gnome-build-meta

./: .editorconfig  .gitignore  .gitlab-ci-codethink.yml  .gitlab-ci.yml  .gitmodules  .rumdl.toml  0001-Revert-Merge-branch-113-fix-memory-leaks-into-master.patch  0001-wip.patch  BOOTABLE_IMAGES.md  CONTRIBUTING.md  LICENSE  Makefile  ONEPLUS6.md  README.md  README.openqa  README.rst  book.toml  build.conf  fdsdk-firmware.patch  fdsdk-linux-image-name-efi.patch  fdsdk-systemd-greeter-display-session.patch  freedesktop-sdk-alsa-fix.patch  freedesktop-sdk-dracut.patch  freedesktop-sdk-flatpak-user.patch  freedesktop-sdk-fusermount-permissions.patch  freedesktop-sdk-fusermount.patch  freedesktop-sdk-lockdown.patch  freedesktop-sdk-module-signing.patch  freedesktop-sdk-pinetab2.patch  freedesktop-sdk-pulseaudio-bluez.patch  freedesktop-sdk-pulseaudio.patch  freedesktop-sdk-systemd-repart-fix.patch  freedesktop-sdk-tpm.patch  freedesktop-sdk.patch  gnome-build-meta.doap  gnome-os-master.xml  junction.refs  main.pm  mkbstosi.yml  mkosi.conf  (+8 more)
.gitlab-ci/: arch-codethink.yml  arch.yml  build_elements.sh  buildstream-nopush.conf  buildstream-nosourcepush.conf  buildstream.conf  ci-bot-track-refs.sh  flat-manager.yml
.gitlab-ci/scripts/: build_elements.sh  ci-bot-comment-intentapps.py  ci-bot-comment-mimeapps.py  ci-bot-track-refs.sh  ci-bot-update-intentapps.sh  ci-bot-update-mimeapps.sh  (+24 more)
checkout/: OVMF_VARS.fd
config/: scenario_definitions.yaml  smbios.txt  vars.json
docs/: FP5.md  ONEPLUS6.md  SUMMARY.md  ci-outputs.md  contributing-flatpak.md  contributing-oci.md  contributing-os.md  contributing.md  debugging.md  hardening.md  index.md  install.md  keys.md  manual-dual-boot.md  openqa.md  phones.md  using.md  what-is-gnome-os.md
elements/: apps.bst  base.bst  core-deps.bst  core-devel.bst  core.bst  export-sdk-docs.bst  export-sdk-gir.bst  flatpak-platform-extensions-extra.bst  flatpak-platform-extensions.bst  flatpak-runtimes.bst  freedesktop-sdk.bst  linux-fp5.bst  openh264-extension.bst  sdk-image.bst  sdk-manifest.bst  sdk-metadata-compose.bst  sdk-metadata.bst  sdk-platform-image.bst  sdk-platform.bst  sdk.bst  world.bst
files/: 0001-components-mozjs.bst-add-patch-for-API-needed-by-gjs.patch
files/gnomeos/live/: Cargo.toml  env-generator.c  generator.c  generator.sh  gnomeos-repart-ramdisk.service  install.sh  kernel-cmdline.c  kernel-cmdline.h  kmsg.c  kmsg.h  live.conf  meson.build  run-cargo.sh  swap-verity.c
files/gnomeos/live/modprobe.d/: brd.conf
files/gnomeos/live/proto-installer/: disk-row.ui  disk-selector.ui  error-icon.ui  gnomeos-installer.service  gresources.xml  install-button.ui  install-or-live.ui  installer-daemon.py  installer-select-disk.ui  installer-window.ui  installer.py  meson.build  org.gnome.Installer-autostart.desktop  org.gnome.Installer-autostart.desktop.in  org.gnome.Installer.desktop  org.gnome.Installer.desktop.in  org.gnome.Installer.service  org.gnome.Installer1.conf  org.gnome.Installer1.policy  org.gnome.Installer1.rules  org.gnome.Installer1.service  recovery-key-display.ui  status-display.ui  warning-icon.ui
files/gnomeos/live/proto-installer/daemon/: logind.rs  main.rs  polkit.rs  systemd.rs
files/gnomeos/live/proto-installer/po/: POTFILES  meson.build
files/gnomeos/live/repart.d/: 50-root.conf
files/gnomeos/live/rules.d/: 90-gnomeos-iso.rules  90-gnomeos-pab.rules  90-ramfs-root.rules  meson.build
files/os-release/: compose.sh  issue  issue.in  issue.net  issue.net.in  meson.build  meson_options.txt  org.gnome.Platform.appdata.xml.in  org.gnome.Sdk.appdata.xml.in  os-release  os-release-symlink.sh  os-release.bootable.in  os-release.flatpak.in  os-release.oci.in  os-release.sysupdate.in
include/: aliases.yml  clang-for-recc.yml  gcc-for-recc.yml  image-version.yml  install-licenses.yml  linux.yml  mirrors.yml  recc.yml  shell.yml
keys/: gnome-base.gpg
lib/: app_test.pm  bootloader.pm  gnomeosdistribution.pm  gnomeutils.pm  serial_terminal.pm
mkosi.repart/: 00-esp.conf
openqa/: main.pm  templates
patches/: 0001-Touch-machine-id-allows-systemd-to-generate-commit-o.patch  0001-vm-prepare-image.sh-Add-setup-machine-id-to-systemd-.patch
plugins/: _utils.py  cargo.py  cargo.yaml  cargo2.py  collect_initial_scripts.py  configuration.py  crate.py  flatpak_repo.py  ostree.py  ostree_mirror.py  version.py
source-plugins/: generated.py
tests/: a11y_hearing.pm  a11y_high_contrast.pm  a11y_large_text.pm  a11y_over_amplification.pm  a11y_screen_keyboard.pm  a11y_seeing.pm  a11y_text_to_speech.pm  a11y_visual_alerts.pm  a11y_zoom.pm  app_baobab.pm  app_eog.pm  app_evince.pm  app_gnome_calculator.pm  app_gnome_calendar.pm  app_gnome_characters.pm  app_gnome_clocks.pm  app_gnome_connections.pm  app_gnome_console.pm  app_gnome_contacts.pm  app_gnome_disk_utility.pm  app_gnome_font_viewer.pm  app_gnome_logs.pm  app_gnome_maps.pm  app_gnome_music.pm  app_gnome_photos.pm  app_gnome_software.pm  app_gnome_system_monitor.pm  app_gnome_text_editor.pm  app_loupe.pm  app_nautilus.pm  app_settings.pm  app_simple_scan.pm  app_snapshot.pm  app_totem.pm  app_yelp.pm  gnome_audio.pm  gnome_desktop.pm  gnome_disable_update_notification.pm  gnome_install.pm  gnome_journal_capture_fix.pm  (+4 more)
utils/: abidiff-suppressions.ini  bst-git.sh  build-image.sh  check-abi  check-open-mrs.py  create-announcement.py  create_announcement.py  download_cve_reports.py  enable-local-repo.sh  ensure-local-key.sh  expand_disk.sh  export-metadata.sh  fetch_test_media.sh  generate-bootc-image.sh  generate-cve-report.py  generate_cargo_dependencies.py  generate_release_contents.py  get_smbios.sh  journald.conf  normalize-yaml.py  openqa_junit_report.py  partial-track.sh  partial_track.py  pipeline-report.py  pipeline_report.py  prepare-shell-extensions.sh  publish-flatpak-gate.py  publish-metadata-to-s3.sh  publish-oci-quay.sh  publish-s3-static.sh  publish-sysupdate-to-s3.sh  republish-docker-image.sh  run-local-repo.sh  run-secure-vm.sh  run-sysupdate-repo.sh  setup_worker.sh  sign-image.sh  start_all_jobs.sh  start_job.sh  sysext-upstream.crt  (+14 more)
(+2724 files in other folders)
