[package]
name = "live"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.8"
event-listener = "5.4.0"
futures = "0.3.31"
log = "0.4.27"
rand = "0.9.0"
serde = "1.0.219"
serde_json = "1.0.140"
tempfile = "3.19.1"
tokio = { version = "1.44.2", features = ["full"] }
zbus = "5.5.0"

[[bin]]
name = "installer-daemon"
path = "proto-installer/daemon/main.rs"
